--- a/app/src/main/res/layout/esm_text.xml
+++ b/app/src/main/res/layout/esm_text.xml
@@ -1,4 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright 2017 Gideon Mills
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~     http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
@@ -9,8 +25,7 @@
         android:id="@+id/esm_question"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
+
         android:padding="16dp"
         android:textStyle="normal|bold"
         android:textSize="18sp" />
@@ -18,9 +33,8 @@
     <TextView
         android:id="@+id/esm_instructions"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
+        android:layout_height="0dp"
+
         android:padding="16dp"
         android:layout_weight="1" />
 
@@ -29,36 +43,13 @@
         android:id="@+id/esm_response"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/esm_instructions"
-        android:gravity="top|left"
+
+        android:gravity="top|start"
         android:inputType="textMultiLine"
         android:lines="5"
         android:padding="16dp" >
 
         <requestFocus />
     </EditText>
-
-    <!--<LinearLayout
-        android:id="@+id/LinearLayout1"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/esm_feedback"
-        android:padding="10dp" >
-
-        <Button
-            android:id="@+id/esm_cancel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Cancel" />
-
-        <Button
-            android:id="@+id/esm_submit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:gravity="center_vertical|center_horizontal"
-            android:text="Button" />
-    </LinearLayout>-->
 
 </LinearLayout>
