--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,27 +15,13 @@
   ~ limitations under the License.
   -->
 
-<!--<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="uk.ac.cam.gsm31.inspiringfutures.MainActivity">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_height="match_parent"
+             android:layout_width="match_parent">
 
-</android.support.constraint.ConstraintLayout>-->
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/questionnaire_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:gravity="center"
-              android:orientation="vertical" >
-
-    <Button
-        android:id="@+id/questionnaire_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Take questionnaire"/>
-        <!--android:textSize="50sp" />-->
-
-</LinearLayout>
+</FrameLayout>
