--- a/app/src/main/res/layout/programme_picker.xml
+++ b/app/src/main/res/layout/programme_picker.xml
@@ -22,7 +22,7 @@
               android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/esm_question"
+        android:text="@string/programme_picker_instructions"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
 
@@ -30,16 +30,16 @@
         android:textStyle="normal|bold"
         android:textSize="18sp" />
 
-    <EditText
-        android:id="@+id/esm_response"
+    <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:inputType="textMultiLine"
-        android:padding="16dp"
-        android:layout_weight="1"
-        android:gravity="top|start">
+        android:layout_height="wrap_content"
+        android:padding="10dp" >
 
-        <requestFocus />
-    </EditText>
+        <RadioGroup
+            android:id="@+id/programme_picker_radios"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" >
+        </RadioGroup>
+    </ScrollView>
 
 </LinearLayout>
