Finished radios and checkboxes questions, including dialogs to add detail to Other options. Added system for compulsory questions (with '*' in question) and compulsory detail for Other options ('*' preceding Other)

--- a/app/src/main/res/layout/esm_questionnaire.xml
+++ b/app/src/main/res/layout/esm_questionnaire.xml
@@ -44,6 +44,13 @@
             android:layout_gravity="end"
             tools:text="Next"/>
 
+        <TextView
+            android:id="@+id/question_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:layout_gravity="center_horizontal"/>
+
         <Button
             android:id="@+id/previous_button"
             android:layout_width="wrap_content"
