--- a/app/src/main/res/layout/esm_info.xml
+++ b/app/src/main/res/layout/esm_info.xml
@@ -16,36 +16,35 @@
   -->
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp">
 
     <LinearLayout
-        android:orientation="vertical"
-        android:gravity="top"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+                  android:orientation="vertical"
+                  android:gravity="top"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/esm_question"
+            android:id="@+id/esm_title"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-
             android:padding="6dp"
+            android:textSize="24sp"
             android:textStyle="normal|bold"
-            android:textSize="18sp" />
+            tools:text="Title" />
 
-        <EditText
-            android:id="@+id/esm_response"
+        <TextView
+            android:id="@+id/esm_content"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:inputType="textMultiLine"
-            android:padding="12dp"
-            android:layout_weight="1"
-            android:gravity="top|start">
+            android:padding="6dp"
+            tools:text="Content">
 
             <!--<requestFocus />-->
-        </EditText>
+        </TextView>
 
     </LinearLayout>
 </ScrollView>
