--- a/app/src/main/res/layout/esm_other_dialog.xml
+++ b/app/src/main/res/layout/esm_other_dialog.xml
@@ -17,7 +17,7 @@
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="10dp">
 
     <LinearLayout
@@ -26,17 +26,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/esm_question"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-
-            android:padding="6dp"
-            android:textStyle="normal|bold"
-            android:textSize="18sp" />
-
         <EditText
-            android:id="@+id/esm_response"
+            android:id="@+id/esm_other"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
@@ -44,7 +35,6 @@
             android:layout_weight="1"
             android:gravity="top|start">
 
-            <!--<requestFocus />-->
         </EditText>
 
     </LinearLayout>
