Improved system for compulsory questions, '*' must now be at start of question

--- a/app/src/main/res/layout/esm_text.xml
+++ b/app/src/main/res/layout/esm_text.xml
@@ -44,7 +44,7 @@
             android:layout_weight="1"
             android:gravity="top|start">
 
-            <!--<requestFocus />-->
+            <requestFocus />
         </EditText>
 
     </LinearLayout>
