--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="compulsory">#FF0000</color>
 
     <!--<color name="colorPrimary">#79BD8E</color>-->
     <!--<color name="colorPrimaryDark">#2C7A62</color>-->
