--- a/app/src/main/res/layout/programme_picker.xml
+++ b/app/src/main/res/layout/programme_picker.xml
@@ -51,7 +51,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/programme_picker_password_prompt"
-        android:inputType="text"/>
-        <!--TODO Hide password?-->
+        android:inputType="textVisiblePassword"/>
+        <!--Password is visible to make entering it easier-->
 
 </LinearLayout>
